# pomodoro

./: Cargo.toml
src/: consts.rs  lib.rs  main.rs
tests/: timing.rs
