[package]
name = "pomodoro"
version = "0.1.0"
edition = "2021"
authors = ["Steven Clausen <stevenclausen1@gmail.com>"]
description = "A pomodoro timer for the terminal"
homepage = "https://github.com/sclause1/pomodoro"
repository = "https://github.com/sclause1/pomodoro"
keywords = ["cli", "timer"]
categories = ["command-line-utilities"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }

indicatif = "0.17.3"